--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "my-v0-project",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -60,8 +59,7 @@
     "vaul": "^0.9.6",
     "zod": "^3.24.1",
     "@emotion/is-prop-valid": "latest",
-    "framer-motion": "latest",
-    "postcss-load-config": "^3.1.4"
+    "framer-motion": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
